--- a/index.html
+++ b/index.html
@@ -112,8 +112,8 @@
 
   <!-- Other Buttons -->
   <div class="side-menu-buttons">
-    <a href="#" class="btn btn-side-menu"><i class="fa fa-download"></i> Download my resume</a>
-    <a href="#" class="btn btn-side-menu"><i class="fa fa-envelope-o"></i> Send me a message</a>
+    <a href="https://doc-04-4g-docs.googleusercontent.com/docs/securesc/2odlhh27fpngrt3qmlf6uafl63ki4b6t/ujl2j62opoeiqfoi2si2urau1qds55o3/1620042750000/07730577271405422018/07730577271405422018/1kns8cuGqSd_xImKCDrQplMNMZAeh3s7O?e=download&authuser=0&nonce=6qb8qoc81h0ho&user=07730577271405422018&hash=q6b8rfhvimchespam3gurdsvgcosigts" class="btn btn-side-menu"><i class="fa fa-download"></i> Download my resume</a>
+    
   </div>
   <!-- /Other Buttons-->
 </div>
@@ -144,10 +144,9 @@
       <div class="row">
         <div class="header-buttons col-md-10 col-md-offset-1">
           <!-- Download Resume Button -->
-          <a href="#" class="btn btn-default btn-top-resume"><i class="fa fa-download"></i><span class="btn-hide-text">Download my resume</span></a>
+          <a href="https://doc-04-4g-docs.googleusercontent.com/docs/securesc/2odlhh27fpngrt3qmlf6uafl63ki4b6t/ujl2j62opoeiqfoi2si2urau1qds55o3/1620042750000/07730577271405422018/07730577271405422018/1kns8cuGqSd_xImKCDrQplMNMZAeh3s7O?e=download&authuser=0&nonce=6qb8qoc81h0ho&user=07730577271405422018&hash=q6b8rfhvimchespam3gurdsvgcosigts" class="btn btn-default btn-top-resume"><i class="fa fa-download"></i><span class="btn-hide-text">Download my resume</span></a>
           <!-- /Download Resume Button -->
           <!-- Mail Button -->
-          <a href="#" class="btn btn-default btn-top-message"><i class="fa fa-envelope-o"></i><span class="btn-hide-text">Send me a message</span></a>
           <!-- /Mail Button -->
         </div>
       </div>
