--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <!-- Page title -->
-  <title>Pham Luu VY Hoang Resume</title>
+  <title>Pham Luu Vy Hoang Resume</title>
   <!-- /Page title -->
 
   <!-- CSS Files
